--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,6 +60,25 @@ input[class^='btn-']:hover {
 .my-4 {
   margin: 4rem 0; }
 
+.text-center {
+  text-align: center; }
+
+.section-title {
+  font-size: 2rem;
+  padding-bottom: 1rem;
+  text-transform: uppercase; }
+
+.border-bottom {
+  height: 3px;
+  width: 3rem;
+  background-color: #ef6d6d;
+  margin: 0 auto 1rem auto; }
+
+.lead {
+  font-size: 1.4rem;
+  margin-bottom: 2rem;
+  word-spacing: 2px; }
+
 * {
   margin: 0;
   padding: 0;
@@ -115,3 +134,27 @@ img {
     line-height: 1.2; }
   #header__home .typewrite {
     display: block; }
+
+#home__a .skills {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+  margin-bottom: 2.5rem; }
+  #home__a .skills i {
+    color: #ef6d6d;
+    padding-bottom: .5rem; }
+
+#home__b .profile {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); }
+  #home__b .profile li.title {
+    font-size: 1.5rem; }
+  #home__b .profile li.number {
+    font-size: 2rem;
+    font-weight: bold; }
+  #home__b .profile div {
+    padding: 3rem 0; }
+    #home__b .profile div:nth-child(odd) {
+      background-color: #f4f4f4; }
+    #home__b .profile div:nth-child(even) {
+      background-color: #ccc; }
