--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -40,4 +40,45 @@
             }
         }
     }
+
+    // home section c
+    &__c {
+        .process {
+            display: grid;
+            grid-template-columns: repeat(4,1fr);
+            gap: 1.5rem;
+            text-align: center;
+
+            &__step {
+                position: absolute;
+                top: 0;
+                right: 0;
+                font-size: 25px;
+                background: $primary-color;
+                border-radius: 50%;
+                line-height: 15px;
+                padding: 1rem;
+                transition: all 1s;
+            }            
+
+            &__icon {
+                position: relative;
+                width: 125px;
+                height: 125px;
+                border-radius: 50%;
+                background: $dark-color;
+                color: #fff;
+                padding: 2rem;
+                text-align: center;
+
+                &:hover {
+                    background: $primary-color;
+
+                    .process__step {
+                        background-color: $dark-color;
+                    }
+                }
+            }
+        }
+    }
 }
