--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,7 +66,8 @@ input[class^='btn-']:hover {
 .section-title {
   font-size: 2rem;
   padding-bottom: 1rem;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  text-align: center; }
 
 .border-bottom {
   height: 3px;
@@ -135,6 +136,11 @@ img {
   #header__home .typewrite {
     display: block; }
 
+#header__inner {
+  background: #333 no-repeat 40% 20%/cover;
+  height: 5.5rem;
+  border-bottom: 3px solid #ef6d6d; }
+
 #home__a .skills {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -187,6 +193,30 @@ img {
       background: #ef6d6d; }
       #home__c .process__icon:hover .process__step {
         background-color: #333; }
+
+#about-a .info {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 1.2rem; }
+  #about-a .info__image {
+    border: 1px solid #f4f4f4;
+    padding: 0.5rem;
+    border-radius: 3px; }
+  #about-a .info__bio {
+    border: 1px soid #f4f4f4;
+    padding: 0.8rem; }
+
+#about-b {
+  color: #fff; }
+  #about-b .progress {
+    height: 20px;
+    background-color: #ccc;
+    border-radius: 5px;
+    margin-bottom: 0.8rem; }
+    #about-b .progress div {
+      height: 100%;
+      text-align: center;
+      background-color: #ef6d6d; }
 
 #main-footer {
   background: #333;
