--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -86,6 +86,7 @@ input[class^= 'btn-']:hover{
     font-size: 2rem;
     padding-bottom: 1rem;
     text-transform: uppercase;
+    text-align: center;
 }
 .border-bottom{
     height: 3px;
