--- a/public/css/main.css
+++ b/public/css/main.css
@@ -261,3 +261,27 @@ img {
       transition: all 0.6s; }
       #main-footer .footer-content .social .fab:hover {
         background: #ef6d6d; }
+
+.items {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  box-shadow: rgba(87, 88, 187, 0.4) 0px 8px 24px; }
+  .items .item {
+    position: relative;
+    background-color: #f4f4f4;
+    overflow: hidden; }
+    .items .item::after {
+      content: "";
+      position: absolute;
+      display: block;
+      background-color: #ef6d6d;
+      opacity: .6;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transform: translateX(-120%) translateY(-120%) rotate(45deg);
+      transition: transform 2s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
+    .items .item:hover::after {
+      transform: scale(2) translateX(-30%) translateY(-30%) rotate(45deg); }
