--- a/public/css/main.css
+++ b/public/css/main.css
@@ -285,3 +285,30 @@ img {
       transition: transform 2s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
     .items .item:hover::after {
       transform: scale(2) translateX(-30%) translateY(-30%) rotate(45deg); }
+
+#contact-a .form-fields {
+  display: grid;
+  grid-template-areas: "name email" "subject phone" "message message" "button button";
+  gap: 1rem;
+  margin-bottom: 1rem; }
+  #contact-a .form-fields .name {
+    grid-area: name; }
+  #contact-a .form-fields .email {
+    grid-area: email; }
+  #contact-a .form-fields .subject {
+    grid-area: subject; }
+  #contact-a .form-fields .phone {
+    grid-area: phone; }
+  #contact-a .form-fields .message {
+    grid-area: message;
+    height: 180px; }
+  #contact-a .form-fields .btn-dark {
+    grid-area: button; }
+  #contact-a .form-fields .input {
+    padding: .5rem 1rem; }
+
+#contact-b .contact-info {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+  color: #fff; }
