--- a/public/css/main.css
+++ b/public/css/main.css
@@ -312,3 +312,69 @@ img {
   grid-template-columns: repeat(3, 1fr);
   text-align: center;
   color: #fff; }
+
+@media (max-width: 768px) {
+  #header__home {
+    height: 30rem; }
+    #header__home .header-content {
+      padding-top: 7rem; }
+    #header__home h1 {
+      font-size: 2.5rem; }
+  #home__a .skills,
+  #home__b .profile,
+  #home__c .process,
+  .items {
+    grid-template-columns: repeat(2, 1fr); } }
+
+@media (max-width: 576px) {
+  #home__a .skills div {
+    border-bottom: 1px #333 solid;
+    padding-bottom: 1rem; }
+    #home__a .skills div:last-child {
+      border: none;
+      padding-bottom: 0; }
+  .lead {
+    font-size: 1rem;
+    margin-bottom: 1.2rem;
+    word-spacing: 1px; }
+  #header__home {
+    height: 10rem;
+    border-radius: 2px solid #ef6d6d;
+    background-position: 20% 30%; }
+    #header__home .header-content {
+      display: none; }
+  #header__inner {
+    height: 10rem; }
+  .main-nav {
+    flex-direction: column;
+    align-items: center; }
+    .main-nav li {
+      padding: 1rem; }
+  #home__a .skills,
+  #home__b .profile,
+  #home__c .process,
+  .items,
+  #contact-b .contact-info {
+    grid-template-columns: 1fr; }
+  #main-footer {
+    height: 7rem; }
+    #main-footer .footer-content {
+      flex-direction: column;
+      padding: 1rem;
+      height: 5rem; }
+      #main-footer .footer-content .social {
+        padding-top: 1rem; }
+  #about-a .info {
+    grid-template-columns: 1fr; }
+  #about-c {
+    display: none; }
+  #contact-a .form-fields {
+    grid-template-areas: "name"  "email" "subject"  "phone" "message" "button"; }
+  #contact-b div {
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px dashed #fff; }
+    #contact-b div:last-child {
+      border: none;
+      padding-bottom: 0;
+      margin-bottom: 0; } }
